tests/baselines/reference/typeParameterConstrainedToOuterTypeParameter2(strict=true).errors.txt
typeParameterConstrainedToOuterTypeParameter2.ts(2,5): error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
typeParameterConstrainedToOuterTypeParameter2.ts(6,5): error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
typeParameterConstrainedToOuterTypeParameter2.ts(10,20): error TS2454: Variable 'a' is used before being assigned.


==== typeParameterConstrainedToOuterTypeParameter2.ts (3 errors) ====
    interface A<T> {
        foo<U extends T>(x: A<A<U>>)
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
    }
    
    interface B<T> {
        foo<U extends T>(x: B<B<U>>)
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
    }
    
    var a: A<string>
    var b: B<string> = a;
                       ~
!!! error TS2454: Variable 'a' is used before being assigned.